# Shift-Left-Secure

./: .gitignore  README.md  action.yaml  action.yml  pyproject.toml  workflow.yml
shift_left_secure/: __main__.py  chatgpt_api.py  gh_action.py  git_handler.py  utils.py
